--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,12 @@
   "scripts": {
     "dev": "concurrently \"tsc --watch\" \"nodemon dist/backend/src/app.js\"",
     "build": "tsc",
-    "start": "node dist/app.js",
+    "start": "node dist/backend/src/app.js",
     "generate": "npx prisma generate",
     "migrate": "npx prisma migrate dev",
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
-    "clean": "sudo rm -rf dist && sudo rm -rf node_modules && npm install"
+    "clean": "sudo rm -rf dist && rm -rf node_modules && npm install"
   },
   "keywords": [],
   "author": "Your Name",
@@ -26,6 +26,8 @@
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.2.0",
     "http-status-codes": "^2.1.4",
+    "module-alias": "^2.2.3",
+    "tsconfig-paths": "^4.2.0",
     "url": "^0.11.4",
     "uuid": "^10.0.0"
   },
