--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "dev": "concurrently \"npm run dev -w frontend\" \"npm run dev -w backend\"",
     "build": "npm run build --workspaces",
     "clean": "npm run clean --workspaces",
-    "lint": "eslint . --no-cache",
+    "lint": "eslint . ",
     "prettier:fix": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "prettier:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "test": "concurrently \"npm run test -w frontend\" \"npm run test -w backend\""
+    "test": "concurrently \"npm run test -w frontend\" \"npm run test -w backend\"",
+    "push": "npm run prettier:fix && npm run lint && npm run test && echo '\n\nLooks great, ready to push!'"
   },
   "devDependencies": {
     "concurrently": "^9.0.1"
