--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,8 @@
     "http-status-codes": "^2.1.4",
     "lodash": "^4.17.21",
     "module-alias": "^2.2.3",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "tsconfig-paths": "^4.2.0",
     "url": "^0.11.4",
     "uuid": "^10.0.0",
@@ -40,6 +42,8 @@
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.13",
     "@types/node": "^22.7.5",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.7",
     "@typescript-eslint/eslint-plugin": "^8.10.0",
     "@typescript-eslint/parser": "^8.10.0",
     "concurrently": "^9.0.1",
