--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.4",
     "@mui/styled-engine-sc": "^6.1.4",
+    "@mui/x-charts": "^7.27.0",
     "@typescript-eslint/eslint-plugin": "^8.11.0",
     "@typescript-eslint/parser": "^8.11.0",
     "framer-motion": "^11.11.11",
@@ -40,7 +41,8 @@
     "react-router-dom": "^6.26.2",
     "styled-components": "^6.1.13",
     "uuid": "^10.0.0",
-    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz",
+    "ogl": "^1.0.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
