--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "express": "^4.21.1",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.2.0",
+    "file-saver": "^2.0.5",
     "http-status-codes": "^2.1.4",
     "lodash": "^4.17.21",
     "module-alias": "^2.2.3",
