--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "@mui/x-charts": "^7.27.0",
     "@typescript-eslint/eslint-plugin": "^8.11.0",
     "@typescript-eslint/parser": "^8.11.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.11.11",
     "http-status-codes": "^2.3.0",
     "papaparse": "^5.4.1",
@@ -49,6 +50,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
+    "@types/file-saver": "^2.0.7",
     "@types/papaparse": "^5.3.14",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
@@ -65,7 +67,7 @@
     "globals": "^15.9.0",
     "jsdom": "^25.0.1",
     "postcss": "^8.4.47",
-    "prettier": "^3.3.3",
+    "prettier": "^3.5.2",
     "supertest": "^7.0.0",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.6.2",
