Add database initialization files and update frontend/package configs

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -12,6 +12,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "sourceMap": true,
+    "noEmit": true,
     "allowImportingTsExtensions": true,
     "lib": ["dom", "ESNext"],
     "types": ["node", "react", "vite/client", "vitest"],
