--- a/backend/package.json
+++ b/backend/package.json
@@ -18,15 +18,20 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.21.1",
+    "axios": "^1.6.0",
+    "connect-sqlite3": "^0.9.13",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-async-handler": "^1.2.0",
+    "express-session": "^1.17.3",
     "express-validator": "^7.2.0",
     "file-saver": "^2.0.5",
     "http-status-codes": "^2.1.4",
     "lodash": "^4.17.21",
     "module-alias": "^2.2.3",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.6",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "tsconfig-paths": "^4.2.0",
