fix: Add workspaces configuration to package.json for CI

--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "palette",
   "private": true,
+  "workspaces": [
+    "frontend",
+    "backend",
+    "palette-types"
+  ],
   "engines": {
     "node": ">=18"
   },
