--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     region: oregon
     plan: free
-    buildCommand: npm install && npm install @rollup/rollup-linux-x64-gnu --save-optional && npm run build:all
+    buildCommand: npm install && cd frontend && npm install @rollup/rollup-linux-x64-gnu && cd .. && npm run build:all
     startCommand: node backend/src/palette2/server.cjs
     envVars:
       - key: NODE_ENV
