Add Rollup Linux dependency to fix Render deployment

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -83,5 +83,8 @@
     "vite": "^6.2.3",
     "vite-tsconfig-paths": "^5.1.0",
     "vitest": "^2.1.4"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.28.1"
   }
 }
