--- a/frontend/package.json
+++ b/frontend/package.json
@@ -85,6 +85,7 @@
     "vitest": "^2.1.4"
   },
   "optionalDependencies": {
-    "@rollup/rollup-linux-x64-gnu": "^4.28.1"
+    "@rollup/rollup-linux-x64-gnu": "^4.28.1",
+    "lightningcss-linux-x64-gnu": "^1.28.2"
   }
 }
