--- a/frontend/package.json
+++ b/frontend/package.json
@@ -86,6 +86,7 @@
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "^4.28.1",
-    "lightningcss-linux-x64-gnu": "^1.28.2"
+    "lightningcss-linux-x64-gnu": "^1.28.2",
+    "@tailwindcss/oxide-linux-x64-gnu": "^4.0.17"
   }
 }
