Fix session store and database paths for Render persistent disk

--- a/render.yaml
+++ b/render.yaml
@@ -11,6 +11,10 @@ services:
         value: production
       - key: PORT
         value: 3000
+      - key: DATA_DIR
+        value: /opt/render/project/src/data
+      - key: DB_PATH
+        value: /opt/render/project/src/data/palette.db
       - key: CANVAS_BASE_URL
         sync: false
       - key: CANVAS_CLIENT_ID
