--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 # Normalize all text files and enforce LF
 * text=auto eol=lf
+dist-electron/*.exe filter=lfs diff=lfs merge=lfs -text
+dist-electron/win-unpacked/*.exe filter=lfs diff=lfs merge=lfs -text
